# Simon-Tatham-Puzzle-Game

./: .gitignore  CMakeLists.txt  README.md  game.c  game.h  game_aux.c  game_aux.h  game_ext.c  game_ext.h  game_random.c  game_sdl.c  game_solve.c  game_struct.h  game_test_atuzun.c  game_test_elhaddiallo.c  game_test_kyereli.c  game_text.c  game_tools.c  game_tools.h  model.c  model.h
queue/: queue.c  queue.h
web/: demo.js  game.css  game.html  game.js  game.wasm  mycanvas.js  wrapper.c
web/src/: game_struct.h  game_tools.h
web/src/queue/: queue.h
